new year updates

--- a/literacy/taxes.html
+++ b/literacy/taxes.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Как рассчитываются и уплачиваются налоги по операциям на брокерском счёте. В каких случаях нужно рассчитывать налог самостоятельно. Когда нужно подавать декларацию и платить налог." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-08" />
-        <meta property="og:article:modified_time" content="2020-07-15" />
+        <meta property="og:article:modified_time" content="2021-01-07" />
 <meta property="og:title" content="Брокерский счёт: как рассчитываются и уплачиваются налоги" />
 <meta property="og:url" content="https://onfin.github.io/literacy/taxes" />
 
@@ -54,7 +54,7 @@
         <h1>Брокерский счёт: как рассчитываются и уплачиваются налоги</h1>
         <div class="meta">
                 <p class="description">Как рассчитываются и уплачиваются налоги по операциям на брокерском счёте. В каких случаях нужно рассчитывать налог самостоятельно. Когда нужно подавать декларацию и платить налог.</p>
-                <p> Обновлено: <time>2020-07-15</time> </p>
+                <p> Обновлено: <time>2021-01-07</time> </p>
 
         </div>
     </header>
@@ -66,16 +66,15 @@
 <ul>
 <li><a href="#_1">В каких случаях нужно самостоятельно рассчитывать налог и подавать декларацию</a></li>
 <li><a href="#_2">В каких случаях можно подать декларацию, чтобы уменьшить налог</a></li>
-<li><a href="#1-2021">Как будут рассчитываться налоги на депозиты с 1 января 2021г</a></li>
+<li><a href="#1-2021">Налоги на депозиты с 1 января 2021г</a></li>
 <li><a href="#_3">Как рассчитываются налоги от операций на брокерском счёте</a><ul>
-<li><a href="#_4">Покупка, продажа и погашение ценных бумаг</a></li>
-<li><a href="#_5">Выплата купонов по облигациям</a></li>
-<li><a href="#_6">Выплата дивидендов по акциям</a></li>
+<li><a href="#_4">Покупка, продажа и погашение ценных бумаг, НКД и купоны</a></li>
+<li><a href="#_5">Выплата дивидендов по акциям</a></li>
 </ul>
 </li>
-<li><a href="#_7">Как удерживаются налоги</a><ul>
-<li><a href="#_8">У российского брокера</a></li>
-<li><a href="#_9">У иностранного брокера</a></li>
+<li><a href="#_6">Как удерживаются налоги</a><ul>
+<li><a href="#_7">У российского брокера</a></li>
+<li><a href="#_8">У иностранного брокера</a></li>
 </ul>
 </li>
 </ul>
@@ -96,50 +95,39 @@
 <li>Декларацию можно подать когда угодно, хоть через несколько лет, но лучше как можно раньше: деньги у нас со временем обесцениваются.</li>
 <li>У налоговой будет 3 месяца на проверку и подтверждение вычетов, потом ещё 1 месяц на возврат переплаты (если она есть).</li>
 </ol>
-<h2 id="1-2021">Как будут рассчитываться налоги на депозиты с 1 января 2021г</h2>
+<h2 id="1-2021">Налоги на депозиты с 1 января 2021г</h2>
 <ol>
-<li>Банки будут сообщать в налоговую сумму начисленных процентов по итогам года (т.е. начиная с 2022 по итогам 21-го) по всем вкладам и счетам со ставкой выше 1%г.</li>
-<li>Налоговая из этой суммы вычтет 1Мр × (ключевую ставку ЦБ на 1 января предыдущего года).</li>
-<li>На оставшуюся сумму будет начислено 13%.</li>
-<li>Налоговая пришлёт уведомление о налоге со сроком уплаты до 1 декабря.</li>
+<li>Банки сообщают в налоговую сумму начисленных процентов по итогам года (т.е. начиная с 2022 по итогам 21-го) по всем вкладам и счетам со ставкой выше 1%г.</li>
+<li>Налоговая из этой суммы вычитает 1Мр × (ключевую ставку ЦБ на 1 января года в котором начислены проценты).</li>
+<li>На оставшуюся сумму начисляются 13%.</li>
+<li>Налоговая присылает уведомление о налоге со сроком уплаты до 1 декабря.</li>
 </ol>
 <h2 id="_3">Как рассчитываются налоги от операций на брокерском счёте</h2>
-<h3 id="_4">Покупка, продажа и погашение ценных бумаг</h3>
+<h3 id="_4">Покупка, продажа и погашение ценных бумаг, НКД и купоны</h3>
 <ol>
 <li>Стоимость продажи/погашения минус стоимость покупки минус комиссии за сделки. Пока вы не продали бумагу — никакой прибыли/убытка по ней не возникает.</li>
 <li>ФИФО. Если вы одну и ту же бумагу покупали в несколько сделок по разной стоимости, то прибыль/убыток будет рассчитываться начиная с более ранних сделок. Т.е. положим вы сперва купили 1 акцию за 1000р, потом 2 того же предприятия за 2000р, потом продали 1 за 1300. Ваша прибыль 1300-1000=300р. Если вы продадите 2 за 1300, то прибыль будет считаться так (1300-1000) + (1300-2000) = -400р убыток.</li>
 <li>В рублях. Если вас угораздило купить ценную бумагу за 100$ при курсе ЦБ РФ на день покупки 1$=60р, а продать за 90$ при курсе 1$=70р, то у вас облагаемая налогом прибыль в размере 90×70 - 100×60 = 300р, а не убыток (90-100)×70=-700р, как вам могло показаться. Однако! Если этой ценной бумагой оказалась номинированная в долларах облигация Минфина РФ, то у вас таки убыток (90-100)×70=-700р.</li>
-<li>Индексация ОФЗ-ИН налогом не облагается. Но спекулятивный доход на ОФЗ-ИН — облагается. Внимательно: если на момент покупки номинал ОФЗ-ИН был 1000р и расходы на покупку составили 990р (цена бумаги + комиссия), а на момент продажи номинал 1100р и доход от продажи 1110 (цена бумаги - комиссия), то налогооблагаемый доход будет (1110-990)-(1100-1000) = 20р. <strong>С 1 января 2021г льгота отменена и будет НДФЛ 13%.</strong></li>
-<li>Прирост НКД для ОФЗ и муниципальных облигаций налогом не облагаются. <strong>С 1 января 2021г льгота отменена и будет НДФЛ 13%.</strong></li>
-<li>Прирост НКД облагается доходом для корпоративных облигаций, даже для тех, которые освобождены от НДФЛ на купонный доход. Т.е. если купить облигацию за 1000р + 50р НКД, получить купон в 100р и продать за ту же 1000р, то НДФЛ будет только с купонного дохода (если будет), а вот если выплаты купона не дожидаться и продать облигацию за 1000р + 99р НКД, то на 99-50=49р будет налог.</li>
 <li>При частичном погашении облигаций налог учитывается пропорционально. Т.е. если облигация номиналом 1000р была куплена за 900р, потом эмитент выплатил в счёт погашения 250р (25% номинала), то налог будет на 25%×(1000р-900р)=25р.</li>
+<li>С 1 января 2021г индексация номинала, НКД и купоны по <strong>всем</strong> облигациям облагаются 13% НДФЛ.</li>
 </ol>
-<h3 id="_5">Выплата купонов по облигациям</h3>
-<ol>
-<li>Про НКД рассказано в предыдущем разделе.</li>
-<li>Купоны по ОФЗ и муниципальным облигациям налогом не облагаются. <strong>С 1 января 2021г льгота отменена и будет НДФЛ 13%.</strong></li>
-<li>Купоны по российским корпоративным облигациям, выпущенным до 1 января 2017г, облагаются НДФЛ. Налог с купонной выплаты на брокерский счёт может удерживаться как в момент выплаты, так и в конце года, в зависимости от брокера и бумаги. Если купонная выплата идёт на банковский счёт — то всегда сразу в момент выплаты.</li>
-<li>Купоны по российским корпоративным облигациям, выпущенным после 1 января 2017г, не облагаются налогом, если номинальная доходность облигации меньше ключевой ставки ЦБ+5%. Сумма превышения облагается налогом в 35%. Т.е. если у корпоративной облигации номинальная стоимость 1000р и годовой купон меньше 115р ((6,5% КС ЦБ + 5%)×1000р), то налога нет. Если годовой купон, например, 130р, то налог в 35% будет начислен на сумму 130-115=15р и удержан в момент выплаты. При этом <em>не важно</em> за какую сумму вы купили облигацию. <strong>Никакие льготы и вычеты на этот налог не распространяются.</strong>  <strong>С 1 января 2021г на все купоны будет НДФЛ 13% в общем порядке.</strong></li>
-<li>Предыдущий пункт не относится к НКД. Если вы купили бумагу номинальной стоимостью 1000р с годовым купоном 130р за 1000р + 120р НКД, а продали за 1000р + 130р НКД не дождавшись выплаты купона, то ваш налог ((1000+130)-(1000+120))×0,13 = 1,3р и на него можно получить вычет. А если вы дождались выплаты купона и только после продали облигацию за 1000р + 0р НКД, то у вас налог (130-115)*0,35=5,25р и 120р убытка, уменьшающих налоговую базу по другим операциям.</li>
-</ol>
-<h3 id="_6">Выплата дивидендов по акциям</h3>
+<h3 id="_5">Выплата дивидендов по акциям</h3>
 <ol>
 <li>Дивиденды по акциям облагаются налогом в 13% и, по факту, это не НДФЛ, а налог на дивиденды (который раньше был 9%). <strong>Никакие льготы и вычеты на него не распространяются.</strong></li>
 <li>По российским акциям 13% удерживается в момент выплаты.</li>
 <li>Иностранный эмитент при выплате дивидендов удерживает налог в соответствии с собственным законодательством, также в момент выплаты. Чтобы избежать излишнего и двойного налогообложения, нужно у брокера заполнить специальную форму. Например, американские эмитенты по умолчанию удерживают налог 30%, при заполнении формы W8-BEN в америке будет удержано 10%, а в России нужно будет доплатить 3%. Но не для всех стран это работает.</li>
 </ol>
-<h2 id="_7">Как удерживаются налоги</h2>
-<h3 id="_8">У российского брокера</h3>
+<h2 id="_6">Как удерживаются налоги</h2>
+<h3 id="_7">У российского брокера</h3>
 <ol>
 <li>На дивиденды по российским акциям — в момент выплаты.</li>
 <li>На дивиденды по иностранным акциям — в момент выплаты в иностранном государстве. Доплата российских налогов или в момент выплаты, или в конце года, а чаще самостоятельно.</li>
-<li>На купоны по российским облигациям в рублях, которые облагаются налогом. При выплате на брокерский счёт — в момент выплаты или в конце года. При выплате на банковский счёт — в момент выплаты.</li>
-<li>На купоны по облигациям в валюте, которые облагаются налогом. Всё по-разному, надо уточнять по конкретной бумаге у конкретного брокера.</li>
-<li>При выводе денег с брокерского счёта. Брокер рассчитает налог на дату вывода денег и вычтет уже удержанную в этом году сумму. Если сумма к доплате больше суммы вывода, удержат 13% от суммы вывода. Если меньше — всю. Т.е. если вы захотели вывести с брокерского счёта 10Кр, а брокер насчитал вам налогов на 10Кр или больше — вы получите 8700р, а если налог оказался пусть даже 9999р — на ваш банковский счёт дойдёт 1 рубль.</li>
+<li>На купоны по облигациям. При выплате на брокерский счёт — в момент выплаты или в конце года. При выплате на банковский счёт — в момент выплаты.</li>
+<li>При выводе денег с брокерского счёта. Брокер рассчитает налог на дату вывода денег и вычтет уже удержанную в этом году сумму. Если остаток налога больше суммы вывода, удержат 13% от суммы вывода. Если меньше — всю. Т.е. если вы захотели вывести с брокерского счёта 10Кр, а брокер насчитал вам налогов на 10Кр или больше — вы получите 8700р, а если налог оказался пусть даже 9999р — на ваш банковский счёт дойдёт 1 рубль.</li>
 <li>В начале года. Брокер рассчитывает налог за год по состоянию на конец 31 декабря. Если он успел удержать больше, чем оказалась итоговая сумма — он вернёт вам лишнее, если меньше, то до 1 февраля попытается забрать недоимку с брокерского счёта (когда и сколько раз будет пытаться — зависит от брокера). Если там сумма меньше, чем недоимка, некоторые брокеры всё списывают, некоторые всё оставляют.</li>
 <li>Если брокер не смог полностью заплатить за вас налог, он отправит уведомление в налоговую, а та включит эту сумму в расчёт ваших налогов к уплате до 1 декабря.</li>
 </ol>
-<h3 id="_9">У иностранного брокера</h3>
+<h3 id="_8">У иностранного брокера</h3>
 <ol>
 <li>На дивиденды и купоны — в момент выплаты согласно законодательству эмитента. Доплату до 13% нужно рассчитать, задекларировать и уплатить в России самостоятельно.</li>
 <li>По остальным операциям — не удерживается. Доход по правилам выше нужно рассчитать, задекларировать и уплатить 13% в России самостоятельно.</li>
@@ -162,7 +150,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/instruments"> &lt;&lt; Краткий обзор инструментов сбережения. Сколько и во что вкладывать </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/iis"> Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов &gt;&gt; </a></div>
+
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
