--- a/pages/sources.html
+++ b/pages/sources.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Источники экономической и финансовой информации, которыми я пользуюсь и всем рекомендую. Обзоры банковских карт, надёжность банков, отчётность компаний, дивиденды, макроэкономическая статистика, и просто очень дельные фундаментальные тексты." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-11-28" />
-        <meta property="og:article:modified_time" content="2020-10-21" />
+        <meta property="og:article:modified_time" content="2020-07-15" />
 <meta property="og:title" content="Источники" />
 <meta property="og:url" content="https://onfin.github.io/pages/sources" />
 
@@ -54,138 +54,99 @@
         <h1>Источники</h1>
         <div class="meta">
                 <p class="description">Источники экономической и финансовой информации, которыми я пользуюсь и всем рекомендую. Обзоры банковских карт, надёжность банков, отчётность компаний, дивиденды, макроэкономическая статистика, и просто очень дельные фундаментальные тексты.</p>
-                <p> Обновлено: <time>2020-10-21</time> </p>
+                <p> Обновлено: <time>2020-07-15</time> </p>
 
         </div>
     </header>
 
     <div class="content">
-        <p>За время работы над этим сайтом у меня накопилось достаточно много источников, которые часто теряются в общем ворохе. Здесь я пытаюсь их перечислить в более-менее систематическом виде. Здесь и учебные материалы, и справочные, и философские, и откровенно дискуссионные, которые я отложил для дальнейшей проработки и интеграции в свою картину мира.</p>
-<p>Жирным выделены источники, особенно рекомендуемые к ознакомлению. Курсивом — спорные или недостаточно мною изученные.</p>
+        <p>Финансы как хобби требуют работы с достаточно большим количеством источников информации, разной степени важности и оперативности. Здесь укажу наиболее полезные.</p>
 <div class="toc">
 <ul>
-<li><a href="#_1">Личные финансы</a><ul>
-<li><a href="#_2">Банки, карты, вклады</a></li>
-<li><a href="#_3">Ранняя пенсия</a></li>
+<li><a href="#_1">Практическая информация</a><ul>
+<li><a href="#_2">Банковские карты, вклады, спецпредложения</a></li>
+<li><a href="#_3">Надёжность банков</a></li>
+<li><a href="#_4">Отчётность и анализ компаний</a></li>
 </ul>
 </li>
-<li><a href="#_4">Инвестирование</a><ul>
-<li><a href="#_5">Пассивные инвестиции</a></li>
-<li><a href="#_6">Активные инвестиции</a></li>
-<li><a href="#_7">Разное</a></li>
+<li><a href="#_5">Макроэкономика, статистика и моделирование</a><ul>
+<li><a href="#_6">Макроэкономические данные и фондовые рынки</a></li>
+<li><a href="#_7">Сервисы для моделирования</a></li>
 </ul>
 </li>
-<li><a href="#_8">Моделирование</a></li>
-<li><a href="#_9">Макроэкономика</a></li>
+<li><a href="#_8">Занимательная теория</a><ul>
+<li><a href="#_9">О бережливости</a></li>
+<li><a href="#_10">Об экономике в целом и инвестировании в частности</a></li>
+<li><a href="#_11">Об инвестировании</a></li>
+</ul>
+</li>
 </ul>
 </div>
-<h2 id="_1">Личные финансы</h2>
+<h2 id="_1">Практическая информация</h2>
 <div id="cards"></div>
 
-<h3 id="_2">Банки, карты, вклады</h3>
-<p>Блоги с регулярными подробными обзорами банковских карт, сервисов, кэшбэка и всего что около (постоянно рекламируют всякие сторонние источники сомнительного содержания, не отвлекайтесь, читайте только про банки):</p>
+<h3 id="_2">Банковские карты, вклады, спецпредложения</h3>
 <ul>
-<li><a href="http://hranidengi.ru/"><strong>Храни деньги</strong></a> (<a href="https://t.me/hranidengi">тлгм</a>).</li>
-<li><a href="https://blogbankir.ru/">Блог банкира</a> (<a href="https://t.me/blogbankir">тлгм</a>).</li>
-<li><a href="https://t.me/cash_back">Cashback и банковские карты</a> (<a href="https://t.me/cash_back">тлгм</a>).</li>
+<li><a href="http://hranidengi.ru/">Храни деньги</a> — блог с регулярными подробными обзорами банковских карт, сервисов и всего что около.</li>
+<li><a href="https://blogbankir.ru/">Блог банкира</a> — аналогично, но с упором в кэшбэк.</li>
+<li><a href="http://www.banki.ru/">Склянки</a> и их <a href="http://www.banki.ru/forum/">форум</a> — отзывы о банках и обсуждение всего и вся.</li>
 </ul>
-<p>Главное место для обсуждения банков:</p>
+<p>У двух первых источников есть телеграм-каналы (<a href="https://t.me/hranidengi">храни деньги</a>, <a href="https://t.me/blogbankir">блог банкира</a>), на которые рекомендую подписаться, чтобы оперативно отслеживать изменения условий по вашим картам; есть ещё аналогичный канал <a href="https://t.me/cash_back">Cashback и банковские карты</a>.</p>
+<p>Каналы коммерческие, постоянно рекламируют всякие сторонние источники сомнительного содержания.</p>
+<h3 id="_3">Надёжность банков</h3>
 <ul>
-<li><a href="http://www.banki.ru/">Банки.ру</a>, их <a href="http://www.banki.ru/forum/">форум</a>, и <a href="https://www.banki.ru/services/responses/">народный рейтинг</a>.</li>
+<li><a href="http://kuap.ru/">Куап</a> — подробная финансовая отчётность и здоровье банков.</li>
+<li><a href="http://www.analizbankov.ru/">Анализ банков</a> — то же, но есть аналитические отчёты по банкам на понятном простом обывателю языке <a href="http://www.analizbankov.ru/bank.php?BankId=tin-koff-bank-2673&amp;BankMenu=nadezhnost">например, Тиньков</a>.</li>
 </ul>
-<p>Финансовая отчётность и здоровье банков:</p>
+<h3 id="_4">Отчётность и анализ компаний</h3>
 <ul>
-<li><a href="http://www.analizbankov.ru/"><strong>Анализ банков</strong></a> — здесь есть аналитические отчёты по банкам на понятном простом обывателю языке <a href="http://www.analizbankov.ru/bank.php?BankId=tin-koff-bank-2673&amp;BankMenu=nadezhnost">например, Тиньков</a>.</li>
-<li><a href="http://kuap.ru/">Куап</a>.</li>
-</ul>
-<h3 id="_3">Ранняя пенсия</h3>
-<p>Пропаганда бережливого образа жизни (без значимого снижения её качества), советы и секреты, философия:</p>
-<ul>
-<li><a href="http://earlyretirementextreme.com/"><strong>ERE</strong></a>.</li>
-<li><a href="https://www.mrmoneymustache.com/"><strong>Mr. Money Mustache</strong></a>.</li>
-<li><a href="https://www.getrichslowly.org/"><em>Get Rich Slowly</em></a>.</li>
-</ul>
-<h2 id="_4">Инвестирование</h2>
-<h3 id="_5">Пассивные инвестиции</h3>
-<p>Учебные материалы:</p>
-<ul>
-<li><strong><a href="https://fintraining.livejournal.com/">Сергей Спирин</a></strong>. Столп народного просвещения, цикл «Введение в инвестиции» (список в левой колонке сайта) к прочтению обязателен.</li>
-<li><a href="https://assetallocation.ru/quick-start/"><strong>Статьи и брошюры</strong></a> об основах портфельного инвестирования, собранные им же.</li>
-<li><a href="https://capital-gain.ru/course/"><strong>Курс от Дмитрия Никитенко</strong></a>. Пока неоконченный, но уже внушающий огромное уважение очень детальной проработкой статей. Обещает стать лучшим источником по данной теме на русском языке.</li>
-</ul>
-<p>Важные статьи:</p>
-<p>Справочные материалы:</p>
-<ul>
-<li><a href="https://www.etf.com/">etf.com</a> и <a href="https://etfdb.com/">etfdb.com</a> — американские ETF.</li>
-<li><a href="https://www.justetf.com">justetf</a> — европейские ETF.</li>
-<li><a href="https://rusetfs.com/landing">rusetfs</a> — российские ETF и БПИФы.</li>
-</ul>
-<h3 id="_6">Активные инвестиции</h3>
-<p>Перед погружением в этот раздел, необходимо прочесть <strong><a href="https://capital-gain.ru/posts/portfolio-active-investing/">статью о проблемах активного подхода</a></strong>.</p>
-<p>Учебные материалы:</p>
-<ul>
-<li><strong><a href="http://arsagera.ru/kuda_i_kak_investirovat/">Арсагера</a></strong>. Столп народного просвещения в деле <em>активных</em> инвестиций, и корпоративного просвещения об управлении компаниями в интересах их акционеров.</li>
-</ul>
-<p>Форум активных стоимостных инвесторов:</p>
-<ul>
-<li><a href="https://forum.roundabout.ru/">ФОрум вОкруг да ОкОлО</a></li>
-</ul>
-<p>Справочные материалы:</p>
-<ul>
-<li><strong><a href="http://e-disclosure.ru/">Центр раскрытия корпоративной информации</a> Интерфакса</strong> — первоисточник по отчётности эмитентов.</li>
-<li><strong><a href="https://www.conomy.ru/">Conomy</a></strong> — здесь удобно смотреть данные из финансовой отчётности за несколько лет.</li>
+<li><a href="http://e-disclosure.ru/">Центр раскрытия корпоративной информации</a> Интерфакса — первоисточник по отчётности эмитентов.</li>
+<li><a href="https://www.conomy.ru/">Conomy</a> — здесь удобно смотреть данные из финансовой отчётности за несколько лет.</li>
 <li>Аналитика Арсагеры: <a href="http://arsagera.ru/analitika/issledovanie_korporativnogo_upravleniya_v_rossii/analiz_sostoyaniya_korporativnogo_upravleniya/">рейтинг корпоративного управления</a> (насколько качественно и прозрачно управляется компания, т.е. нет ли у менеджмента тенденции умыкнуть или разбазарить ваши деньги) и <a href="https://bf.arsagera.ru/">блогофорум акций</a> — оперативная информация о динамике показателей.</li>
-<li><em><a href="https://smart-lab.ru/dividends/">Дивидендный раздел</a> Смарт-Лаба</em> — удобно представлены ближайшие дивидендные отсечки и доходность к текущим котировкам. За его пределы лучше не выходить — начинается трэш, угар и содомия.</li>
-<li><em><a href="https://dohod.ru/ik/analytics/dividend/">Дивидендный раздел</a> сайта УК «Доход»</em> — можно посмотреть дивидендную историю и особенности дивидендной политики компании, а также прогноз по дивидендам исходя из неё. Не все эмитенты присутствуют.</li>
-<li><em><a href="https://dohod.ru/ik/analytics/share">Раздел анализа акций</a> там же</em> — есть мультипликаторы и краткое «экспертное» резюме, можно использовать для первичного отбора акций в портфель.</li>
+<li><a href="https://smart-lab.ru/dividends/">Дивидендный раздел</a> Смарт-Лаба — удобно представлены ближайшие дивидендные отсечки и доходность к текущим котировкам. За его пределы лучше не выходить — начинается трэш, угар и содомия.</li>
+<li><a href="https://dohod.ru/ik/analytics/dividend/">Дивидендный раздел</a> сайта УК «Доход» — можно посмотреть дивидендную историю и особенности дивидендной политики компании, а также прогноз по дивидендам исходя из неё. Не все эмитенты присутствуют.</li>
+<li><a href="https://dohod.ru/ik/analytics/share">Раздел анализа акций</a> там же — есть мультипликаторы и краткое «экспертное» резюме, можно использовать для первичного отбора акций в портфель.</li>
 <li><a href="https://www.finviz.com/screener.ashx">Finviz</a> — отбор иностранных акций по формальным показателям.</li>
 <li><a href="https://stockrow.com/">Stockrow</a> — наглядный анализ динамики показателей иностранных акций.</li>
+<li><a href="https://www.etf.com/">etf.com</a> и <a href="https://etfdb.com/">etfdb.com</a> — базы данных по американским ETF.</li>
 </ul>
-<h3 id="_7">Разное</h3>
-<p>Блоги, в которых иногда попадаются интересные статьи:</p>
+<h2 id="_5">Макроэкономика, статистика и моделирование</h2>
+<h3 id="_6">Макроэкономические данные и фондовые рынки</h3>
 <ul>
-<li><strong><a href="https://sensibleinvesting.tv/acuity">Acuity</a></strong> — короткие, занимательные, хорошо изготовленные, аргументированные и иллюстрированные статьи на финансовые темы.</li>
-<li><a href="http://www.rationalanswer.ru/">RationalAnswer </a></li>
-<li><a href="https://theirrelevantinvestor.com">The Irrelevant Investor</a></li>
-<li><em><a href="https://roundabout.ru/">вОкруг да ОкОлО</a></em></li>
-<li><em><a href="https://rostsber.ru">Рост сбережений</a></em></li>
-<li><em><a href="https://gregbar.livejournal.com">gregbar</a></em></li>
-</ul>
-<p><a href="https://ofdollarsanddata.com/lifestyle-creep/">How Much Lifestyle Creep is Okay?</a> Насколько можно позволить своим расходам вырасти при росте доходов, чтобы не сдвинуть свои финансовые цели. Чем больше сберегаете — тем меньше.</p>
-<h2 id="_8">Моделирование</h2>
-<p>Блоги-источники вдохновения.</p>
-<p>Наши:</p>
-<ul>
-<li><em><a href="https://nakhusha.livejournal.com">nakhusha</a></em></li>
-<li><em><a href="https://at6.livejournal.com/">at6</a></em></li>
-<li><em><a href="https://nefedor.livejournal.com/">nefedor</a></em></li>
-</ul>
-<p>Не наши:
-+ <a href="https://ofdollarsanddata.com">Of Dollars and Data</a></p>
-<p>Источники данных:</p>
-<ul>
+<li><a href="http://rffx.ru/">rffx</a> — блог с индикаторами российской экономики.</li>
 <li><a href="http://www.cbr.ru/">Центральный банк РФ</a> — огромный массив данных по финансовому сектору.</li>
 <li><a href="http://www.gks.ru/">Федеральная служба государственной статистики</a> — тоже огромный массив данных, но уже более ориентированных на человека.</li>
 <li><a href="https://www.quandl.com/">Quandl</a> — собрание всевозможных данных по мировой экономике.</li>
-<li><a href="https://datahub.io/">DataHub</a> — просто собрание всевозможных данных, в том числе по макроэкономике и финансовым рынкам (месячные цены на золото с 1950г только тут нашёл в свободном доступе).</li>
 <li><a href="http://mba.tuck.dartmouth.edu/pages/faculty/ken.french/data_library.html">Kenneth French</a> — статистические таблицы по доходности различным образом сконструированных портфелей на различных фондовых рынках.</li>
 <li><a href="http://www.econ.yale.edu/~shiller/data.htm">Robert Shiller</a> — история рынка США с конца XIX в.: индекс фондового рынка, дивиденды, инфляция, стоимость недвижимости, процентные ставки и проч.</li>
 <li><a href="https://tradingeconomics.com/">Trading econimics</a> — огромный массив макроэкономических данных, очень удобно представленных.</li>
 <li><a href="https://data.worldbank.org/">World Bank Open Data</a> — экономическая статисика от Всемирного Банка</li>
-<li><a href="https://www.moex.com/ru/indices">Индексы Московской биржи</a>.</li>
-<li><a href="https://iss.moex.com/iss/reference/">API Московской биржи</a> — для автоматической загрузки котировок и прочих данных.</li>
-<li><a href="https://www.alphavantage.co/">AlphaVantage</a> — бесплатное api для загрузки котировок, дивидендов и сплитов по американским акциям.</li>
 </ul>
-<p>Сервисы:</p>
+<h3 id="_7">Сервисы для моделирования</h3>
 <ul>
 <li><a href="https://www.portfoliovisualizer.com/">PortfolioVisualizer</a> — сервис для визуализации истории портфелей из выбранных классов активов или реальных акций.</li>
+<li><a href="https://www.moex.com/ru/indices">Индексы Московской биржи</a>.</li>
+<li><a href="https://iss.moex.com/iss/reference/">API Московской биржи</a> — для автоматической загрузки котировок и прочих данных.</li>
+<li><a href="https://www.alphavantage.co/">AlphaVantage</a> — api для загрузки котировок, дивидендов и сплитов по американским акциям.</li>
 </ul>
-<h2 id="_9">Макроэкономика</h2>
+<h2 id="_8">Занимательная теория</h2>
+<h3 id="_9">О бережливости</h3>
 <ul>
-<li><a href="http://rffx.ru/">rffx</a> — блог с индикаторами российской экономики.</li>
+<li><a href="http://earlyretirementextreme.com/">ERE</a> — с этого блога всё это и началось, идея выйти на пенсию как можно раньше.</li>
+<li><a href="https://www.mrmoneymustache.com/">Mr. Money Mustache</a> — ещё один тридцатилетний пенсионер рассказывает о способах экономии.</li>
+<li><a href="https://www.getrichslowly.org/">Get Rich Slowly</a> — да, это популярная тема.</li>
+</ul>
+<h3 id="_10">Об экономике в целом и инвестировании в частности</h3>
+<ul>
+<li><a href="https://sensibleinvesting.tv/acuity">Acuity</a> — короткие, занимательные, хорошо изготовленные, аргументированные и иллюстрированные статьи на финансовые темы.</li>
 <li><a href="https://www.pragcap.com/">Pragmatic Capitalism</a> — блог о функционировании финансовой системы и фондовых рынков.</li>
 </ul>
-<p><a href="http://jwmason.org/slackwire/on-cryptocurrencies/">Money and Cryptocurrencies</a>. Для начала, разбор тщеты криптовалют: их капитализация ничтожна, ни финансовые институты, ни реальный сектор на них не полагаются и не используют, транзакции дороги, участники обмена сильно зависят от посредников, инфраструктура de facto принадлежит нескольким крупным игрокам. А далее уже начинается обсуждение двух взглядов на деньги: как на фундаментальную сущность с самостоятельной ценностью (на этой концепции основываются практически все современные криптовалюты), и как на условную единицу, производную от реальных обязательств (что более соответствует современным представлениям и об устройстве экономики, и о происхождении собственно денег).</p>
+<h3 id="_11">Об инвестировании</h3>
+<ul>
+<li><strong><a href="https://fintraining.livejournal.com/">Сергей Спирин</a></strong> — столп народного просвещения в деле <em>пассивных</em> инвестиций; временами несколько фанатичен, но все статьи в правой колонке сайта — <strong>читать обязательно</strong>.</li>
+<li><strong><a href="http://arsagera.ru/kuda_i_kak_investirovat/">Арсагера</a></strong> — а это столп просвещения в деле <em>активных</em> инвестиций.</li>
+<li><a href="http://activeinvestor.pro/">Активный инвестор</a>, <a href="https://nakhusha.livejournal.com">nakhusha</a>, <a href="https://gregbar.livejournal.com">gregbar</a>, <a href="https://zhu-s.livejournal.com">zhu-s</a>, <a href="https://borodainvestora.ru/">Борода инвестора</a>, <a href="https://at6.livejournal.com">at6</a>, <a href="https://roundabout.ru/">Вокруг да около</a>, <a href="https://rostsber.ru">Рост сбережений</a> — ещё финансовые блоги, которые я читаю.</li>
+</ul>
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
