--- a/literacy/iis.html
+++ b/literacy/iis.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-10" />
-        <meta property="og:article:modified_time" content="2020-07-15" />
+        <meta property="og:article:modified_time" content="2021-01-08" />
 <meta property="og:title" content="Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/iis" />
 
@@ -54,7 +54,7 @@
         <h1>Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов</h1>
         <div class="meta">
                 <p class="description">Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС.</p>
-                <p> Обновлено: <time>2020-07-15</time> </p>
+                <p> Обновлено: <time>2021-01-08</time> </p>
 
         </div>
     </header>
@@ -83,15 +83,15 @@
 <li>ИИС может быть только один, безотносительно типа.</li>
 <li>Налоговый вычет по долгосрочному владению ценными бумагами не применяется.</li>
 <li>Получать дивиденды и купоны на банковский счёт можно только у нескольких брокеров (ВТБ, Сбербанк, Уралсиб, БКС).</li>
-<li><strong>Налогооблагаемый финансовый результат рассчитывается только при закрытии счёта, а не по итогам каждого года.</strong></li>
-<li><strong>Можно получить налоговый вычет по НДФЛ в размере внесённых денег. Только за тот же год, в который внесены деньги. Не более уплаченного (к уплате) в этом году НДФЛ. Не более 52Кр (т.е. не более чем на 400Кр взносов).</strong></li>
-<li>Если закрыть счёт раньше чем через 3 года, полученные вычеты придётся вернуть с пенями (КСЦБ/150 за каждый день, т.е. примерно 13%г сейчас).</li>
+<li>Налогооблагаемый финансовый результат рассчитывается только при закрытии счёта, а не по итогам каждого года.</li>
+<li>Можно получить налоговый вычет по НДФЛ в размере внесённых денег. Только за тот же год, в который внесены деньги. Не более уплаченного (к уплате) в этом году НДФЛ из основной налоговой базы (т.е. без выигрышей и инвестиционных доходов кроме НКД и купонов по облигациям, см. <a href="http://ivo.garant.ru/#/document/77698830/paragraph/120987292:2">ст. 210 НК РФ</a>). Не более 52Кр (т.е. не более чем на 400Кр взносов).</li>
+<li>Если закрыть счёт раньше чем через 3 года, полученные вычеты придётся вернуть с пенями (КСЦБ/150 за каждый день, т.е. примерно 8,5%г сейчас).</li>
 </ol>
 <p>Как получить вычет:</p>
 <ol>
 <li>Отправить деньги на ИИС.</li>
 <li>Получить у банка платёжное поручение на перевод на ИИС с отметкой об исполнении или у брокера выписку по ИИС, в которой отражено зачисление денег.</li>
-<li>Написать налоговую декларацию, в которой перечислить облагаемые НДФЛ доходы (кроме дивидендов и 35% на процентные выплаты превышающие КСЦБ+5% и выигрыши) и указать зачисленную на ИИС сумму (в разделе инвестиционных вычетов, строка про вычет, предусмотренный пп. 2 п. 1 ст. 219.1 НК РФ).</li>
+<li>Написать налоговую декларацию, в которой перечислить попадающие под вычет доходы и указать зачисленную на ИИС сумму (в разделе инвестиционных вычетов, строка про вычет, предусмотренный пп. 2 п. 1 ст. 219.1 НК РФ).</li>
 <li>Отправить декларацию, приложив документы, подтверждающие перечисленные доходы и зачисление денег на ИИС, а также договор на открытие ИИС.</li>
 <li>Заполнить и отправить заявление на возврат переплаты по НДФЛ. Там просто банковские реквизиты на которые будут отправлены деньги.</li>
 <li>Налоговая проверяет декларацию 3 месяца, потом 1 месяц перечисляет деньги. Может и быстрее, как повезёт.</li>
@@ -113,7 +113,7 @@
 <li>Снять со счёта деньги или бумаги нельзя, счёт нужно сперва закрыть.</li>
 <li><strong>Налогооблагаемый финансовый результат не рассчитывается.</strong></li>
 <li>Получать дивиденды и купоны на банковский счёт можно только у нескольких брокеров (ВТБ, Сбербанк, Уралсиб, БКС).</li>
-<li>Если закрыть счёт раньше чем через 3 года, налогооблагаемый финансовый результат будет рассчитан по каждому году и рассчитанные налоги придётся уплатить с пенями как будто бы вы не платили налог по обычному брокерскому счёту (КСЦБ/150 за каждый день просрочки, т.е. примерно 13%г сейчас).</li>
+<li>Если закрыть счёт раньше чем через 3 года, налогооблагаемый финансовый результат будет рассчитан по каждому году и рассчитанные налоги придётся уплатить с пенями как будто бы вы не платили налог по обычному брокерскому счёту (КСЦБ/150 за каждый день просрочки, т.е. примерно 8,5%г сейчас).</li>
 </ol>
 <p>Как получить вычет:</p>
 <ol>
@@ -126,11 +126,14 @@
 <li>Тип счёта определяется только фактом запроса у налоговой вычета на взносы. Пока не запросили — можете думать, какой вариант вам выгоднее. Но вычет на взносы можно забрать только за последние три года.</li>
 <li>Дивиденды <em>всегда</em> облагаются налогом.</li>
 <li>Можно перевести ИИС от одного брокера к другому, но это весьма дорогая и жутко бюрократическая процедура (с беготнёй с кипой бумаги между обоими брокерами, а точнее даже их депозитариями), а отводится на неё всего месяц.</li>
+<li>Если вы случайно открыли второй ИИС — придётся закрыть <strong>первый</strong>, причём в течение месяца. Иначе лишитесь права на вычет по обоим.</li>
 <li>При закрытии ИИС-А можно перевести ценные бумаги на обычный брокерский счёт, тогда при их продаже можно воспользоваться трёхлетней льготой. Лучше если этот счёт будет у того же брокера, ибо предыдущий пункт. Перевод бумаг всё равно не бесплатный, как правило от 300 до 1500р за одно наименование.</li>
 <li>Закрывать ИИС через 3 года не обязательно, льготы действуют бессрочно (пока).</li>
 <li>3 года отсчитываются от даты договора на открытие ИИС.</li>
 <li>Как вы будете распоряжаться деньгами, зачисленными на ИИС, никого не волнует.</li>
 <li>Если у вас небольшие доходы, получение купонов и дивидендов на банковский счёт с последующим возвратом на ИИС позволяет включить в вычет и их. Если вы их получаете сразу на ИИС, то указать их в декларации для получения вычета не получится.</li>
+<li>При получении купонов по облигациям на ИИС, они не облагаются налогом. Однако разные брокеры реализуют это по-разному. Одни — зачисляют купон без удержания налога, в случае ИИС-А удерживая налог при закрытии счёта. Другие — удерживают налог при выплате, а при закрытии ИИС-Б — возвращают излишне удержанный налог.</li>
+<li>Уникальная фишка ВТБ — зачисление дивидендов на ИИС без удержания налога.</li>
 </ol>
 <h2 id="_4">Льгота по долгосрочному владению ценными бумагами (ЛДВ)</h2>
 <p>Она же трёхлетняя льгота, она же инвестиционный налоговый вычет, предусмотренный пп. 1 п. 1 ст. 219.1 НК РФ.</p>
@@ -147,7 +150,7 @@
 <li>Декларацию писать обязательно, сам брокер в следующем году ваши убытки от предыдущего учесть не может.</li>
 <li>Дивиденды не учитываются, с них налог платится всегда.</li>
 <li>Убыток считается и переносится отдельно по фондовому (ФР/ЦБ) и срочному (ФИСС/ПФИ) рынкам. По итогам года брокер уменьшает доход с одного рынка на убыток с другого, а вот на последующие годы они переносятся раздельно.</li>
-<li>ОСТОРОЖНО! Убыток переносится на <em>последующие</em> годы, а не на предыдущие. Если вы в 2019г зафиксировали 10Мр прибыли, тут же купили на них что-то, что в 2020г обесценилось в ноль, деньги на 1,3Мр налога вам найти придётся.</li>
+<li>ОСТОРОЖНО! Убыток переносится на <em>последующие</em> годы, а не на предыдущие. Если вы в 2019г зафиксировали 10Мр прибыли, и тут же купили на них что-то, что в 2020г обесценилось в ноль, деньги на 1,3Мр налога вам найти придётся.</li>
 </ol>
 <h2 id="_7">Возможность зачесть убытки с другого брокерского счёта</h2>
 <p>Если на одном брокерском счёте вы получили убыток, а на другом — прибыль, то вы можете уменьшить прибыль на размер убытка.</p>
@@ -155,8 +158,6 @@
 <p>Действовать аналогично предыдущему пункту, только вместо заполнения графы убытков предыдущих лет вы будете заполнять страницы доходов про брокерским счетам, указывая при соответствующем коде дохода размер вычета (расходов) больше размера дохода. К сожалению, форма 2-НДФЛ в этом месте не совпадает с формой декларации, и придётся посидеть с калькулятором и листом расчёта НДФЛ от брокера, чтобы всё корректно перенести в декларацию.</p>
 <h2 id="_8">Льготы по облигациям</h2>
 <ol>
-<li>Не облагается налогом купон по ОФЗ и муниципальным облигациям (в т.ч. валютным). <strong>С 1 января 2021г льгота отменена и будет НДФЛ 13%.</strong></li>
-<li>Не облагается купон по рублёвым корпоративным облигациям, выпущенным с 1 января 2017г по 31 декабря 2020г (<a href="https://www.moex.com/ru/markets/stock/privilegeindividuals.aspx">список</a>), если суммарный купон за год меньше (номинальная стоимость облигации) × (ключевая ставка ЦБ + 5%). Превышение облагается налогом в 35%. <strong>С 1 января 2021г на все купоны будет НДФЛ 13% в общем порядке.</strong></li>
 <li>Не облагается налогом курсовая переоценка стоимости облигаций Минфина в валюте. Пусть вы купили облигацию по цене номинала в 1000$ при курсе 1$=60р, а в день погашения курс был 1$=70р. Если это была облигация Минфина, то налог вы не заплатите. Для других облигаций он будет <span><span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord">7</span><span class="mord">0</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">×</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:0.72777em;vertical-align:-0.08333em;"></span><span class="mord">1</span><span class="mord">0</span><span class="mord">0</span><span class="mord">0</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">−</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:0.72777em;vertical-align:-0.08333em;"></span><span class="mord">6</span><span class="mord">0</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">×</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">1</span><span class="mord">0</span><span class="mord">0</span><span class="mord">0</span><span class="mclose">)</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">×</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:0.80556em;vertical-align:-0.05556em;"></span><span class="mord">1</span><span class="mord">3</span><span class="mord">%</span><span class="mspace" style="margin-right:0.2777777777777778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2777777777777778em;"></span></span><span class="base"><span class="strut" style="height:0.8388800000000001em;vertical-align:-0.19444em;"></span><span class="mord">1</span><span class="mord">3</span><span class="mord">0</span><span class="mord">0</span><span class="mord cyrillic_fallback">р</span></span></span></span></span>.</li>
 </ol>
     </div>
@@ -177,7 +178,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/taxes"> &lt;&lt; Брокерский счёт: как рассчитываются и уплачиваются налоги </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/instruments/cash"> Наличные деньги &gt;&gt; </a></div>
+
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
