--- a/notes/myportfolio.html
+++ b/notes/myportfolio.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="По каким правилам я формирую свой портфель ценных бумаг и почему именно так. Из каких бумаг он состоит. Каким образом эти бумаги распределены между брокерами и почему. Возможные направления развития потрфеля." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-11" />
-        <meta property="og:article:modified_time" content="2020-01-01" />
+        <meta property="og:article:modified_time" content="2021-01-05" />
 <meta property="og:title" content="Мой портфель ценных бумаг и стратегия использования брокерских счетов" />
 <meta property="og:url" content="https://onfin.github.io/notes/myportfolio" />
 
@@ -54,7 +54,7 @@
         <h1>Мой портфель ценных бумаг и стратегия использования брокерских счетов</h1>
         <div class="meta">
                 <p class="description">По каким правилам я формирую свой портфель ценных бумаг и почему именно так. Из каких бумаг он состоит. Каким образом эти бумаги распределены между брокерами и почему. Возможные направления развития потрфеля.</p>
-                <p> Обновлено: <time>2020-01-01</time> </p>
+                <p> Обновлено: <time>2021-01-05</time> </p>
 
         </div>
     </header>
@@ -97,13 +97,13 @@
 </ol>
 <h3 id="_4">Состав</h3>
 <ul>
-<li>Транспорт: НКХП, Аэрофлот, НМТП</li>
-<li>Цветная металлургия: Норникель, Алроса, ВСМПО Ависма</li>
+<li>Транспорт: НКХП, Аэрофлот, НМТП, Совкомфлот</li>
+<li>Цветная металлургия: Норникель, Алроса, ВСМПО Ависма, Русал, En+</li>
 <li>Чёрная металлургия: Северсталь, ММК, НЛМК</li>
-<li>Строительство: ПИК, Мостотрест, ЛСР</li>
-<li>Потребительский сектор: Детский мир, Магнит, М Видео, АФК Система, Черкизово</li>
+<li>Строительство: ПИК, ЛСР</li>
+<li>Потребительский сектор: Детский мир, Магнит, М Видео, АФК Система, Черкизово, Русская аквакультура</li>
 <li>Финансы: Мосбиржа, Сбербанк (преф), ЦМТ (преф)</li>
-<li>Электрогенерация: ТГК-1, Юнипро, Русгидро, Энел, Мосэнерго, ОГК-Б</li>
+<li>Электрогенерация: ТГК-1, Юнипро, Русгидро, Энел, Мосэнерго, ОГК-Б, En+, Европейская электротехника</li>
 <li>Телеком: МТС, Ростелеком (преф)</li>
 <li>Электросети: МРСК Урала, МРСК Волги, МРСК ЦП, ФСК, Пермэнергосбыт (преф)</li>
 <li>Нефтегаз: Лукойл, Саратовский НПЗ (преф), Газпромнефть, Газпром, Башнефть (преф), Татнефть (преф)</li>
@@ -162,7 +162,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/accounting"> &lt;&lt; Как и зачем я веду учёт личных финансов </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
